Corrigindo erros de sintaxe

--- a/desenvolvedores.htm
+++ b/desenvolvedores.htm
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/STARFOCUS - logo.ico">
+    <link rel="shortcut icon" href="img/STARFOCUS-logo.ico">
 
     <title>Desenvolvedores | S.T.A.R.F.O.C.U.S.</title>
 </head>
@@ -47,44 +47,44 @@
           </div>
 
           <div class="col-md-3">
-            <div class="card" id="card-desenvolvedores">
+            <div class="card card-desenvolvedores">
               <a class="card-link" href="#amanda"><img src="img/amanda.jpg" class="card-img-top" alt="Imagem de Perfil 1">
-                <div class="card-body" id="card-corpo">
-                  <h5 class="card-title" id="card-titulo">Amanda Perez</h5>
-                  <p class="card-text" id="card-palavras">Ciência de Dados - FGV EMAp</p>
+                <div class="card-body card-corpo">
+                  <h5 class="card-title card-titulo">Amanda Perez</h5>
+                  <p class="card-text card-palavras">Ciência de Dados - FGV EMAp</p>
                 </div>
               </a>
             </div>
           </div>
 
           <div class="col-md-3">
-            <div class="card" id="card-desenvolvedores">
+            <div class="card card-desenvolvedores">
               <a class="card-link" href="#ezequiel"><img src="img/ezequiel.jpg" class="card-img-top" alt="Imagem de Perfil 2">
-                <div class="card-body" id="card-corpo">
-                  <h5 class="card-title" id="card-titulo">Ezequiel Braga</h5>
-                  <p class="card-text" id="card-palavras">Matemática Aplicada - FGV EMAp</p>
+                <div class="card-body card-corpo">
+                  <h5 class="card-title card-titulo">Ezequiel Braga</h5>
+                  <p class="card-text card-palavras">Matemática Aplicada - FGV EMAp</p>
                 </div>
               </a>
             </div>
           </div>
 
           <div class="col-md-3">
-            <div class="card" id="card-desenvolvedores">
+            <div class="card card-desenvolvedores">
               <a class="card-link" href="#jairon"><img src="img/jairon.jpg" class="card-img-top" alt="Imagem de Perfil 3">
-                <div class="card-body" id="card-corpo">
-                  <h5 class="card-title" id="card-titulo">Jairon Henrique</h5>
-                  <p class="card-text" id="card-palavras">Matemática Aplicada - FGV EMAp</p>
+                <div class="card-body card-corpo">
+                  <h5 class="card-title card-titulo">Jairon Henrique</h5>
+                  <p class="card-text card-palavras">Matemática Aplicada - FGV EMAp</p>
                 </div>
               </a>
             </div>
           </div>
 
           <div class="col-md-3">
-            <div class="card" id="card-desenvolvedores">
+            <div class="card card-desenvolvedores">
               <a class="card-link" href="#sofia"><img src="img/sofia.jpg" class="card-img-top" alt="Imagem de Perfil 4">
-                <div class="card-body" id="card-corpo">
-                  <h5 class="card-title" id="card-titulo">Sofia Lakschevitz</h5>
-                  <p class="card-text" id="card-palavras">Matemática Aplicada - FGV EMAp</p>
+                <div class="card-body card-corpo">
+                  <h5 class="card-title card-titulo">Sofia Lakschevitz</h5>
+                  <p class="card-text card-palavras">Matemática Aplicada - FGV EMAp</p>
                 </div>
               </a>
             </div>
@@ -95,7 +95,7 @@
       </div>
     </div>
 
-    <div id="sobre-area">
+    <div class="sobre-area">
       <div class="container-fluid" id="amanda">
         <div class = "row">
           <div class="col-md-8">
@@ -108,10 +108,10 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             </p>
-            <a href="https://www.facebook.com/groups/139744391271439/user/100008703466803" target="_blank" class="bi bi-facebook" id="facebook"></a>
-            <a href="https://www.instagram.com/amanda.de.m.perez/" target="_blank" class="bi bi-instagram" id="instagram"></a>
-            <a href="mailto:nandaperez2002@gmail.com" target="_blank" class="bi bi-envelope-fill" id="email"></a>
-            <a href="https://github.com/Perez-Amanda" target="_blank" class="bi bi-github" id="github"></a>
+            <a href="https://www.facebook.com/groups/139744391271439/user/100008703466803" target="_blank" class="bi bi-facebook facebook"></a>
+            <a href="https://www.instagram.com/amanda.de.m.perez/" target="_blank" class="bi bi-instagram instagram"></a>
+            <a href="mailto:nandaperez2002@gmail.com" target="_blank" class="bi bi-envelope-fill email"></a>
+            <a href="https://github.com/Perez-Amanda" target="_blank" class="bi bi-github github"></a>
           </div>
           <div class="col-md-4">
             <img class="img-fluid" src="img/amanda.jpg" alt="Amanda"/>
@@ -120,7 +120,7 @@
       </div>
     </div>
 
-    <div id="sobre-area">
+    <div class="sobre-area">
       <div class="container-fluid" id="ezequiel">
         <div class = "row">
           <div class="col-md-8">
@@ -133,10 +133,10 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             </p>
-            <a href="https://www.facebook.com/profile.php?id=100008145907144" target="_blank" class="bi bi-facebook" id="facebook"></a>
-            <a href="https://www.instagram.com/ezequiel_braga_ebs/" target="_blank" class="bi bi-instagram" id="instagram"></a>
-            <a href="mailto: ezequielsantos2306@gmail.com" target="_blank" class="bi bi-envelope-fill" id="email"></a>
-            <a href="https://github.com/EzequielEBS" target="_blank" class="bi bi-github" id="github"></a>
+            <a href="https://www.facebook.com/profile.php?id=100008145907144" target="_blank" class="bi bi-facebook facebook"></a>
+            <a href="https://www.instagram.com/ezequiel_braga_ebs/" target="_blank" class="bi bi-instagram instagram"></a>
+            <a href="mailto:ezequielsantos2306@gmail.com" target="_blank" class="bi bi-envelope-fill email"></a>
+            <a href="https://github.com/EzequielEBS" target="_blank" class="bi bi-github github"></a>
           </div>
           <div class="col-md-4">
             <img class="img-fluid" src="img/ezequiel.jpg" alt="Ezequiel"/>
@@ -145,7 +145,7 @@
       </div>
     </div>
 
-    <div id="sobre-area"> 
+    <div class="sobre-area"> 
       <div class="container-fluid" id="jairon">
         <div class = "row">
           <div class="col-md-8">
@@ -158,10 +158,10 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             </p>
-            <a href="https://www.facebook.com/jairon.batista.5" target="_blank" class="bi bi-facebook" id="facebook"></a>
-            <a href="https://www.instagram.com/jairon_henrique/" target="_blank" class="bi bi-instagram" id="instagram"></a>
-            <a href="mailto: henriquejairon@gmail.com" target="_blank" class="bi bi-envelope-fill" id="email"></a>
-            <a href="https://github.com/JaironHenrique" target="_blank" class="bi bi-github" id="github"></a>
+            <a href="https://www.facebook.com/jairon.batista.5" target="_blank" class="bi bi-facebook facebook"></a>
+            <a href="https://www.instagram.com/jairon_henrique/" target="_blank" class="bi bi-instagram instagram"></a>
+            <a href="mailto:henriquejairon@gmail.com" target="_blank" class="bi bi-envelope-fill email"></a>
+            <a href="https://github.com/JaironHenrique" target="_blank" class="bi bi-github github"></a>
           </div>
           <div class="col-md-4">
             <img class="img-fluid" src="img/jairon.jpg" alt="Jairon"/>
@@ -183,10 +183,10 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             </p>
-            <a href="https://www.facebook.com/sofia.laks.5/" target="_blank" class="bi bi-facebook" id="facebook"></a>
-            <a href="https://www.instagram.com/sofialakschevitz/" target="_blank" class="bi bi-instagram" id="instagram"></a>
-            <a href="mailto: sofia.laks15@gmail.com" target="_blank" class="bi bi-envelope-fill" id="email"></a>
-            <a href="https://github.com/sofialakschevitz" target="_blank" class="bi bi-github" id="github"></a>
+            <a href="https://www.facebook.com/sofia.laks.5/" target="_blank" class="bi bi-facebook facebook"></a>
+            <a href="https://www.instagram.com/sofialakschevitz/" target="_blank" class="bi bi-instagram instagram"></a>
+            <a href="mailto:sofia.laks15@gmail.com" target="_blank" class="bi bi-envelope-fill email"></a>
+            <a href="https://github.com/sofialakschevitz" target="_blank" class="bi bi-github github"></a>
           </div>
           <div class="col-md-4">
             <img class="img-fluid" src="img/sofia.jpg" alt="Sofia"/>
@@ -220,7 +220,7 @@
               <p>Nos deixe uma mensagem:</p>
             </div>
             <div class="col-md-6" id="contact-form">
-              <form action="">
+              <form action="#">
                 <input type="email" class="form-control" placeholder="E-mail" name="email">
                 <input type="email" class="form-control" placeholder="Assunto" name="subject">
                 <textarea class="form-control" rows="3" placeholder="Sua mensagem" name="message"></textarea>
