--- a/servicos_pomodoro.html
+++ b/servicos_pomodoro.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
-    <link rel="shortcut icon" href="img/STARFOCUS - logo.ico">
+    <link rel="shortcut icon" href="img/STARFOCUS-logo.ico">
     <link rel="stylesheet" href="style.css">
 
     <title>Pomodoro | S.T.A.R.F.O.C.U.S.</title>
@@ -100,7 +100,7 @@
                 <p>Nos deixe uma mensagem:</p>
               </div>
               <div class="col-md-6" id="contact-form">
-                <form action="">
+                <form action="#">
                   <input type="email" class="form-control" placeholder="E-mail" name="email">
                   <input type="email" class="form-control" placeholder="Assunto" name="subject">
                   <textarea class="form-control" rows="3" placeholder="Sua mensagem" name="message"></textarea>
