--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
     
-    <link rel="shortcut icon" href="img/STARFOCUS - logo.ico">
+    <link rel="shortcut icon" href="img/STARFOCUS-logo.ico">
     <link rel="stylesheet" href="style.css">
 
     <title>Início | S.T.A.R.F.O.C.U.S.</title>
@@ -111,11 +111,11 @@
         
         <!-- sobre o app -->
 
-        <div id="about-area">
+        <div class="about-area">
             <div class="container">
                 <div class="row">
                   <div class="col-12"> 
-                    <h3 id="Conheça" class="main-title">Conheça o S.T.A.R.F.O.C.U.S.</h3>
+                    <h3 class="main-title Conheça">Conheça o S.T.A.R.F.O.C.U.S.</h3>
                   </div>
                   <div class="col-1"> </div>
                   <div class="col-4 text-center">
@@ -142,11 +142,11 @@
 
 
         <!-- Apelo final -->
-        <div id="about-area">
+        <div class="about-area">
           <div class="container" id = "apelo-container">
               <div class="row align-items-center">
                 <div class="col-12"> 
-                  <h3 id="Conheça" class="main-title">Se interessou?</h3>
+                  <h3 class="main-title Conheça">Se interessou?</h3>
                 </div>
                 <div class="col-8 text-center">
                   <h3 class="about-title">Então não perca tempo!</h3>
@@ -187,7 +187,7 @@
               <p>Nos deixe uma mensagem:</p>
             </div>
             <div class="col-md-6" id="contact-form">
-              <form action="">
+              <form action="#">
                 <input type="email" class="form-control" placeholder="E-mail" name="email">
                 <input type="email" class="form-control" placeholder="Assunto" name="subject">
                 <textarea class="form-control" rows="3" placeholder="Sua mensagem" name="message"></textarea>
