Acrescentado gráfico genérico de exemplo para o desempenho

--- a/servicos_desempenho.html
+++ b/servicos_desempenho.html
@@ -54,9 +54,23 @@
                 </li>
             </ul>
             </div>
-            <div class="card-body">
-            <!--<h5 class="card-title">Título especial</h5>-->
-            <p class="card-text">Desculpe, não há nenhum desempenho para exibir ainda.</p>
+            <div class="card-body"><div class="row">
+              <div class="col-md-4">
+                  <h5>Beber água</h5>
+                  <br>
+                  <img src="img/grafico_generico.jpg" alt="Gráfico genérico para ilustrar" class="grafico"/>
+                  <br>
+              </div>
+              <div class="col-md-4">
+                <h5>Estudar Linguagens de Programação</h5>
+                <br>
+                <img src="img/grafico_generico.jpg" alt="Gráfico genérico para ilustrar" class="grafico"/>
+                <br>
+              </div>
+              <div class="col-md-4">
+              </div>
+            </div>
+            <!--<p class="card-text">Desculpe, não há nenhum desempenho para exibir ainda.</p>-->
             </div>
         </div>
     </div>
