--- a/criar_atv.html
+++ b/criar_atv.html
@@ -45,28 +45,45 @@
     <main>
 
     <!--Card Serviços-->
-
-    <div class="container-fluid">
-        <div class="card text-center" id="card-servicos4">
-            <div class="card-header">
-            <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-item">
-                <a class="nav-link active" href="#" id="aba1-ativa">Minhas atividades</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="servicos_pomodoro.html" id="aba2">Pomodoro</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="servicos_desempenho.html" id="aba3">Desempenho</a>
-                </li>
-            </ul>
-            </div>
-            <div class="card-body">
-            <p class="card-text">Puxa, parece que você ainda não adicionou nenhuma atividade para monitorar :(</p>
+    
+    <div class="container-fluid espaco-footer">
+      <div class="card text-center" id="card-servicos1">
+          <div class="card-header">
+          <ul class="nav nav-tabs card-header-tabs">
+              <li class="nav-item">
+              <a class="nav-link active" href="#" id="aba1-ativa">Minhas atividades</a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" href="servicos_pomodoro.html" id="aba2">Pomodoro</a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" href="servicos_desempenho.html" id="aba3">Desempenho</a>
+              </li>
+          </ul>
+          </div>
+          <div class="card-body">
+            <p class="card-text"> <i title = "Cada estrela é um copo de água" class="bi-info-circle-fill" role = "img"></i> Beber água:
+                <i class="bi-star-fill" role="img" style="color:yellow"></i>
+                <i class="bi-star-fill" role="img" style="color:yellow"></i>
+                <i class="bi-star-fill" role="img" style="color:yellow"></i>
+                <i class="bi-star-fill" role="img" ></i>
+                <i class="bi-star-fill" role="img" ></i>
+                <i class="bi-star-fill" role="img" ></i>
+                <i class="bi-star-fill" role="img" ></i>
+                <i class="bi-star-fill" role="img" ></i>
+                <a href="" class="btn btn-primary">Adicionar estrela</a>
+                <a href="" class="btn btn-primary">Remover estrela</a>
+            </p>
+            <p class="card-text"> <i title = "Cada estrela é um pomodoro" class="bi-info-circle-fill" role = "img"></i> Estudar Linguagens de Programação:  
+                <i class="bi-star-fill" role="img" style="color:yellow"></i>
+                <i class="bi-star-fill" role="img" style="color:yellow"></i>
+                <i class="bi-star-fill" role="img" ></i>
+                <a href="" class="btn btn-primary">Adicionar estrela</a>
+                <a href="" class="btn btn-primary">Remover estrela</a></p>
             <a href="criar_atv.html" class="btn btn-primary">Nova atividade</a>
             </div>
-        </div>
-    </div>
+      </div>
+  </div>
 
     <!--"Pop-up" para criar tarefa/atividade-->
 
