Correção de erro no título da navbar

--- a/criar_conta.htm
+++ b/criar_conta.htm
@@ -20,10 +20,10 @@
                     <img id = "logo" src="img/logotipo.png" alt = "logotipo">
                 </a> 
                 
-                <span class="navbar-text">
+                <div class="navbar-text">
                     <h3 id="sigla">S.T.A.R.F.O.C.U.S.</h3> 
                     <h6 id="titulo-comp">Sistema de Trabalho, Agenda e Rotina Focada e Organizada Contido em um Único Site</h6>
-                </span>
+                </div>
                 
             <button class = "navbar-toggler" type="button" data-toggle = "collapse" data-target = "#navbar-links" aria-controls = "navbar-links" aria-expanded="false" aria-label = "Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
