--- a/servicos_desempenho.html
+++ b/servicos_desempenho.html
@@ -19,15 +19,14 @@
                     <img id = "logo" src="img/logotipo.png" alt = "logotipo">
                 </a> 
                 
-                <span class="navbar-text">
+                <div class="navbar-text">
                     <h3 id="sigla">S.T.A.R.F.O.C.U.S.</h3> 
                     <h6 id="titulo-comp">Sistema de Trabalho, Agenda e Rotina Focada e Organizada Contido em um Único Site</h6>
-                </span>
-
-            <button class = "navbar-toggler" type="button" data-toggle = "collapse" data-target = "#navbar-links" aria-controls = "navbar-links" aria-expanded="false" aria-label = "Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
+                </div>
+              <button class = "navbar-toggler" type="button" data-toggle = "collapse" data-target = "#navbar-links" aria-controls = "navbar-links" aria-expanded="false" aria-label = "Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
                 <div class="navbar-nav">
                   <a class="nav-item nav-link" id="home-menu" href="index.html"><span>Home</span></a>
                   <a class="nav-item nav-link" id="services-menu" href="#">Serviços</a>
